--- a/DesktopApp/src/edu/esprit/gui/Utilisateur.fxml
+++ b/DesktopApp/src/edu/esprit/gui/Utilisateur.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="624.0" prefWidth="1088.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.UtilisateurController">
    <children>
       <Label layoutX="207.0" layoutY="370.0" text="Telephone" textFill="#0b0b0b">
@@ -62,7 +61,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="reset" layoutX="424.0" layoutY="553.0" mnemonicParsing="false" onAction="#onreset" prefHeight="60.0" prefWidth="120.0" style="-fx-background-color: #FFD480;" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Reset">
+      <Button fx:id="reset" layoutX="424.0" layoutY="553.0" mnemonicParsing="false" onAction="#onreset" prefHeight="60.0" prefWidth="120.0" style="-fx-background-color: #FFD480;" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Annuler">
          <graphic>
             <FontAwesomeIconView fill="#e1d5d5" glyphName="CLOSE" size="20" />
          </graphic>
@@ -79,7 +78,7 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Button fx:id="cat_update" layoutX="424.0" layoutY="473.0" mnemonicParsing="false" onAction="#updateuser" prefHeight="60.0" prefWidth="120.0" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="Mettre à jour">
+      <Button fx:id="cat_update" layoutX="424.0" layoutY="473.0" mnemonicParsing="false" onAction="#updateuser" prefHeight="60.0" prefWidth="153.0" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="Mettre à jour">
          <graphic>
             <FontAwesomeIconView fill="#ebeaea" glyphName="EDIT" size="20" />
          </graphic>
