--- a/DesktopApp/src/edu/esprit/gui/PieChart.fxml
+++ b/DesktopApp/src/edu/esprit/gui/PieChart.fxml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="edu.esprit.gui.PieChartController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.PieChartController">
    <children>
       <PieChart fx:id="piechart" layoutX="76.0" layoutY="23.0" prefHeight="348.0" prefWidth="430.0" />
+      <ImageView fx:id="retour" layoutX="14.0" layoutY="14.0" onMouseClicked="#retun_btn">
+         <image>
+            <Image url="@images/arrow.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
