--- a/DesktopApp/src/edu/esprit/gui/rating.fxml
+++ b/DesktopApp/src/edu/esprit/gui/rating.fxml
@@ -5,11 +5,10 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="168.0" prefWidth="426.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="edu.esprit.gui.RatingController">
+<AnchorPane id="AnchorPane" prefHeight="168.0" prefWidth="426.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.RatingController">
    <children>
       <Label layoutX="165.0" layoutY="24.0" text="Rate this app:" />
       <Slider fx:id="slider" blockIncrement="1.0" layoutX="26.0" layoutY="59.0" majorTickUnit="1.0" max="5.0" min="1.0" minorTickCount="1" prefHeight="35.0" prefWidth="365.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
-      <Button fx:id="btn_env" layoutX="179.0" layoutY="113.0" mnemonicParsing="false" onAction="#envoyerclick" text="Envoyer" />
+      <Button fx:id="btn_env" layoutX="179.0" layoutY="113.0" mnemonicParsing="false" onAction="#envoyerclick" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Envoyer" />
    </children>
 </AnchorPane>
